<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/registration"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/registationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/registration_description"
        android:textSize="16sp"
        android:textColor="#A5000000"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registrationWrapLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="username"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-3dp" />

            <ImageView
                android:id="@+id/registrationNameIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/name_layout"
                app:layout_constraintTop_toTopOf="@+id/name_layout"
                app:srcCompat="@drawable/user" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="username"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-3dp" />

            <ImageView
                android:id="@+id/loginUsernameIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/username_layout"
                app:layout_constraintTop_toTopOf="@+id/username_layout"
                app:srcCompat="@drawable/user" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_layout">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-3dp" />

            <ImageView
                android:id="@+id/loginEmailIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/email_layout"
                app:layout_constraintTop_toTopOf="@+id/email_layout"
                app:srcCompat="@drawable/email_svgrepo_com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="username"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-3dp" />

            <ImageView
                android:id="@+id/loginPasswordIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/password_layout"
                app:layout_constraintTop_toTopOf="@+id/password_layout"
                app:srcCompat="@drawable/lock" />

            <ImageView
                android:id="@+id/togglepasswordIconRegistration"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:onClick="togglePasswordRegistration"
                app:layout_constraintEnd_toEndOf="@+id/password_layout"
                app:layout_constraintTop_toTopOf="@+id/password_layout"
                app:srcCompat="@drawable/eye_svgrepo_com" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Button registrasi-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:paddingHorizontal="24dp"
        android:text="@string/registration"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationWrapLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_login_confirmation"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="navigateToLogin"
            android:text="@string/login_title"
            android:textColor="#ED5F0F"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>